完成登录显示和首页部分链接跳转

--- a/static/genres.html
+++ b/static/genres.html
@@ -172,7 +172,7 @@
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
 												<li><a href="genres.html">Adventure</a></li>
-												<li><a href="comedy.html">Comedy</a></li>
+												<li><a href="../templates/comedy.html">Comedy</a></li>
 												<li><a href="genres.html">Documentary</a></li>
 												<li><a href="genres.html">Fantasy</a></li>
 												<li><a href="genres.html">Thriller</a></li>
@@ -1329,7 +1329,7 @@
 						<a href="genres.html">Adventure</a>
 					</li>
 					<li>
-						<a href="comedy.html">Comedy</a>
+						<a href="../templates/comedy.html">Comedy</a>
 					</li>
 					<li>
 						<a href="icons.html">Icons</a>
