--- a/static/single.html
+++ b/static/single.html
@@ -1,3 +1,5 @@
+{#   上传页面  用不用以后再说   #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -179,7 +181,7 @@
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
 												<li><a href="genres.html">Adventure</a></li>
-												<li><a href="comedy.html">Comedy</a></li>
+												<li><a href="../templates/comedy.html">Comedy</a></li>
 												<li><a href="genres.html">Documentary</a></li>
 												<li><a href="genres.html">Fantasy</a></li>
 												<li><a href="genres.html">Thriller</a></li>
@@ -776,7 +778,7 @@
 						<a href="genres.html">Adventure</a>
 					</li>
 					<li>
-						<a href="comedy.html">Comedy</a>
+						<a href="../templates/comedy.html">Comedy</a>
 					</li>
 					<li>
 						<a href="icons.html">Icons</a>
