--- a/static/list.html
+++ b/static/list.html
@@ -1,3 +1,5 @@
+{#   电影索引列表页面   #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -248,7 +250,7 @@
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
 												<li><a href="genres.html">Adventure</a></li>
-												<li><a href="comedy.html">Comedy</a></li>
+												<li><a href="../templates/comedy.html">Comedy</a></li>
 												<li><a href="genres.html">Documentary</a></li>
 												<li><a href="genres.html">Fantasy</a></li>
 												<li><a href="genres.html">Thriller</a></li>
@@ -386,7 +388,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -404,7 +406,7 @@
 											<td>2010</td>
 											<td>SD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy</a></td>
 											<td>6.5</td>
 										  </tr>
 										  <tr>
@@ -413,7 +415,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -449,7 +451,7 @@
 											<td>2010</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">China</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy</a></td>
 											<td>8.9</td>
 										  </tr>
 										  <tr>
@@ -458,7 +460,7 @@
 											<td>2010</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -476,7 +478,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -485,7 +487,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -503,7 +505,7 @@
 											<td>2010</td>
 											<td>SD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy</a></td>
 											<td>6.5</td>
 										  </tr>
 										  <tr>
@@ -512,7 +514,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -548,7 +550,7 @@
 											<td>2010</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">China</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy</a></td>
 											<td>8.9</td>
 										  </tr>
 										  <tr>
@@ -557,7 +559,7 @@
 											<td>2010</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -575,7 +577,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -584,7 +586,7 @@
 											<td>2013</td>
 											<td>HD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy, Drama</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy, Drama</a></td>
 											<td>7.0</td>
 										  </tr>
 										  <tr>
@@ -602,7 +604,7 @@
 											<td>2010</td>
 											<td>SD</td>
 											<td class="w3-list-info"><a href="genres.html">United Kingdom</a></td>
-											<td class="w3-list-info"><a href="comedy.html">Comedy</a></td>
+											<td class="w3-list-info"><a href="../templates/comedy.html">Comedy</a></td>
 											<td>6.5</td>
 										  </tr>
 										</tbody>
@@ -4718,7 +4720,7 @@
 						<a href="genres.html">Adventure</a>
 					</li>
 					<li>
-						<a href="comedy.html">Comedy</a>
+						<a href="../templates/comedy.html">Comedy</a>
 					</li>
 					<li>
 						<a href="icons.html">Icons</a>
