--- a/static/news.html
+++ b/static/news.html
@@ -1,3 +1,5 @@
+{#   新闻页面  没什么用  不用这个   #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -155,7 +157,7 @@
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
 												<li><a href="genres.html">Adventure</a></li>
-												<li><a href="comedy.html">Comedy</a></li>
+												<li><a href="../templates/comedy.html">Comedy</a></li>
 												<li><a href="genres.html">Documentary</a></li>
 												<li><a href="genres.html">Fantasy</a></li>
 												<li><a href="genres.html">Thriller</a></li>
@@ -915,7 +917,7 @@
 						<a href="genres.html">Adventure</a>
 					</li>
 					<li>
-						<a href="comedy.html">Comedy</a>
+						<a href="../templates/comedy.html">Comedy</a>
 					</li>
 					<li>
 						<a href="icons.html">Icons</a>
