--- a/static/short-codes.html
+++ b/static/short-codes.html
@@ -1,3 +1,5 @@
+{#   给程序员看的页面格式代码  不用   #}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -156,7 +158,7 @@
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown">
 												<li><a href="genres.html">Adventure</a></li>
-												<li><a href="comedy.html">Comedy</a></li>
+												<li><a href="../templates/comedy.html">Comedy</a></li>
 												<li><a href="genres.html">Documentary</a></li>
 												<li><a href="genres.html">Fantasy</a></li>
 												<li><a href="genres.html">Thriller</a></li>
@@ -809,7 +811,7 @@
 						<a href="genres.html">Adventure</a>
 					</li>
 					<li>
-						<a href="comedy.html">Comedy</a>
+						<a href="../templates/comedy.html">Comedy</a>
 					</li>
 					<li>
 						<a href="icons.html">Icons</a>
